<resources>
    <string name="app_name">ViewsAndLayouts</string>
    <string name="tv1">TextView1</string>
    <string name="tv2">TextView2</string>
    <string name="tv3">TextView3</string>
    <string name="ltv1">LinearTextView1</string>
    <string name="ltv2">LinearTextView2</string>
    <string name="ltv3">LinearTextView3</string>
    <string name="image_description">To show various views and layouts..</string>
    <string name="type_text">Type text</string>
    <string name="click">Click</string>
</resources>
